--- a/package.json
+++ b/package.json
@@ -4,15 +4,17 @@
   "private": true,
   "main": "public/main.js",
   "dependencies": {
+    "@material-ui/core": "^4.11.4",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "electron": "13.1.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "4.2.0",
+    "react-pdf": "^5.3.0",
     "react-scripts": "4.0.3",
-    "web-vitals": "^1.0.1",
-    "electron": "13.1.3"
+    "web-vitals": "^1.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -38,5 +40,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "eslint-plugin-only-warn": "^1.0.2"
   }
 }
