--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "public/main.js",
   "dependencies": {
     "@material-ui/core": "^4.11.4",
+    "@react-pdf/renderer": "^2.0.15",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
